--- a/src/components/shippingAddress/shippingAddrManager/ShippingAddressManager.module.css
+++ b/src/components/shippingAddress/shippingAddrManager/ShippingAddressManager.module.css
@@ -1,5 +1,6 @@
 .container {
-  width: 800px;
+  width: 100%;
+  max-width: 1000px;
   padding: 20px;
 }
 
@@ -29,12 +30,14 @@
   border-bottom: 1px solid var(--text-color);
   border-top: 1px solid var(--text-color);
   text-align: center;
+  font-weight: 400;
 }
 .table td {
   font-size: 14px;
   padding: 12px;
   border-bottom: 1px solid var(--border-color2);
   text-align: center;
+  font-weight: 400;
 }
 
 .deleteBtn {
