--- a/src/components/header/search/SearchContainer.module.css
+++ b/src/components/header/search/SearchContainer.module.css
@@ -13,7 +13,7 @@
   width: 100%;
   height: 350px;
   overflow: hidden;
-  background: #fafafa;
+  background: var(--bg-color3);
   border-left: 1px solid var(--primary-color);
   border-right: 1px solid var(--primary-color);
   border-bottom: 1px solid var(--primary-color);
