--- a/src/components/myPage/sideMenu/SideMenu.module.css
+++ b/src/components/myPage/sideMenu/SideMenu.module.css
@@ -1,10 +1,12 @@
 .sideWrapper{
-    width: 200px;
+    width: 100%;
+    max-width: 200px;
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
+    flex-shrink: 0;
     gap: 20px;
 }
 .sideTitle{
