--- a/src/components/products/product1.css
+++ b/src/components/products/product1.css
@@ -35,6 +35,7 @@
   margin: 5px 0;
 }
 .product1-detail > div span {
+  font-family: Montserrat;
   font-size: 18px;
   font-weight: 500;
   margin-right: 2px;
